Dashboard Fakultas selesai

--- a/app/fakultas/change-password-fakultas.html
+++ b/app/fakultas/change-password-fakultas.html
@@ -1233,7 +1233,7 @@
                   </li>
 
                   <li class="">
-                     <a href="/app/auditor/profile_auditor.html" >
+                     <a href="/app/fakultas/profile-fakultas.html" >
                         <span class="nav-icon uil uil-users-alt"></span>
                         <span class="menu-text">Profile</span>
                         <!-- <span class="toggle-icon"></span> -->
@@ -1241,7 +1241,7 @@
                   </li>
 
                   <li class="">
-                     <a href="/app/auditor/change-password-auditor.html">
+                     <a href="/app/fakultas/change-password-fakultas.html">
                         <span class="nav-icon uil uil-sync"></span>
                         <span class="menu-text">Change Password</span>
                      </a>
@@ -1263,90 +1263,47 @@
             <div class="container-fluid">
                <div class="row ">
                   <div class="col-lg-12">
+
                      <div class="breadcrumb-main">
-                        <h4 class="text-capitalize breadcrumb-title">Halaman Profile</h4>
+                        <h4 class="text-capitalize breadcrumb-title">Halaman Ubah Password</h4>
                         <div class="breadcrumb-action justify-content-center flex-wrap">
                            <nav aria-label="breadcrumb">
                               <ol class="breadcrumb">
-                                 <li class="breadcrumb-item"><a href="#"><i class="uil uil-estate"></i>Profile</a></li>
+                                 <li class="breadcrumb-item"><a href="#"><i class="uil uil-estate"></i>Change Password</a></li>
                                  <!-- <li class="breadcrumb-item active" aria-current="page">Demo 2</li> -->
                               </ol>
                            </nav>
                         </div>
                      </div>
-                  </div>
-               </div>
-               <div class="col-lg-12">
-                  <div class="card card-horizontal card-default card-md mb-4">
-                     <div class="card-header">
-                        <h6>Update Profile</h6>
-                     </div>
-                     <div class="card-body py-md-30">
-                        <div class="horizontal-form">
-                           <form action="#">
-                              <div class="form-group row">
-                                 <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="inputName" class=" col-form-label color-dark fs-14 fw-500 align-center">Nama Anda : </label>
+                     <div class="col-lg-12">
+                        <div class="card card-default card-md mb-4">
+                           <div class="card-header">
+                              <h6>Lengkapi Data Berikut</h6>
+                           </div>
+                           <div class="card-body">
+                              <form action="#">
+                                 <div class="form-group">
+                                    <label for="a12" class="il-gray fs-14 fw-500 align-center mb-10">Nama :</label>
+                                    <input type="text" class="form-control ih-small ip-light radius-xs b-light px-15" id="a12" placeholder="Name User">
                                  </div>
-                                 <div class="col-sm-9">
-                                    <input type="text" class="form-control ih-medium ip-light radius-xs b-light px-15" id="inputName" placeholder="Duran Clayton">
+                                 <div class="form-group">
+                                    <label for="a13" class="il-gray fs-14 fw-500 align-center mb-10">Password Lama :</label>
+                                    <input type="text" class="form-control ih-small ip-light radius-xs b-light px-15" id="a13" placeholder="Password lama">
                                  </div>
-                              </div>
-                              <div class="form-group row">
-                                 <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text" class=" col-form-label color-dark fs-14 fw-500 align-center">NIK / NIP :</label>
+                                 <div class="form-group">
+                                    <label for="a14" class="il-gray fs-14 fw-500 align-center mb-10">Password Baru :</label>
+                                    <input type="text" class="form-control ih-small ip-light radius-xs b-light px-15" id="a14" placeholder="Password Baru">
                                  </div>
-                                 <div class="col-sm-9">
-                                    <input type="email" class="form-control ih-medium ip-light radius-xs b-light px-15" id="element-text" placeholder="1122XXX">
+                                 <div class="form-group">
+                                    <label for="a14" class="il-gray fs-14 fw-500 align-center mb-10">Konfirmasi Password :</label>
+                                    <input type="text" class="form-control ih-small ip-light radius-xs b-light px-15" id="a14" placeholder="Konfirmasi Password">
                                  </div>
-                              </div>
-                              <div class="form-group row">
-                                 <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text2" class=" col-form-label color-dark fs-14 fw-500 align-center">Telepon</label>
-                                 </div>
-                                 <div class="col-sm-9">
-                                    <input type="url" class="form-control ih-medium ip-light radius-xs b-light px-15" id="element-text2" placeholder="62851xxxx">
-                                 </div>
-                              </div>
-                              <div class="form-group row">
-                                 <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text3" class=" col-form-label color-dark fs-14 fw-500 align-center">Email</label>
-                                 </div>
-                                 <div class="col-sm-9">
-                                    <input type="number" class="form-control ih-medium ip-light radius-xs b-light px-15" id="element-text2" placeholder="xx@gmail.com">
-                                 </div>
-                              </div>
-                              <div class="form-group row">
-                                 <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text3" class=" col-form-label color-dark fs-14 fw-500 align-center">Foto Anda Saat Ini :</label>
-                                 </div>
-                                 <div class="col-sm-9">
-                                    <a href="#" class="profile-image rounded-circle d-block m-0 wh-38" style="background-image:url('/img/tm6.png'); background-size: cover;"></a>
-                                 </div>
-                              </div>
-                              <div class="form group row">
-                                 <div class="col-sm-3 d-flex aling-items-center">
-                                    <label for="element-text5" class=" col-form-label color-dark fs-14 fw-500 align-center">Upload Foto Baru</label>
-                                 </div>
-                                 <div class="col-sm-9">
-                                    <div class="custom-file">
-                                       <input class="form-control custom-file-input" type="file" id="customFile">
-                                    </div>
-                                 </div>
-                              </div>
-                              <br>
-                              <div class="form-group row justify-content-end">
-                                 <div class="col-sm-12">
-                                     <button class="btn btn-primary btn-default btn-squared text-capitalize radius-md shadow2 btn-sm">Save Changes</button>
-                                 </div>
-                             </div>
-                           </form>
+                                 <button class="btn btn-primary px-30" type="submit">Update</button>
+                              </form>
+                           </div>
                         </div>
                      </div>
                   </div>
-                  <!-- ends: .card -->
-
-               </div>
                <!-- ends: .row -->
                </div>
             </div>
