--- a/app/auditor/change-password-auditor.html
+++ b/app/auditor/change-password-auditor.html
@@ -1233,7 +1233,7 @@
                   </li>
 
                   <li class="">
-                     <a href="/app/auditor/pofile_auditor" >
+                     <a href="/app/auditor/pofile_auditor.html" >
                         <span class="nav-icon uil uil-users-alt"></span>
                         <span class="menu-text">Profile</span>
                         <!-- <span class="toggle-icon"></span> -->
