--- a/app/fakultas/profile-fakultas.html
+++ b/app/fakultas/profile-fakultas.html
@@ -1233,7 +1233,7 @@
                   </li>
 
                   <li class="">
-                     <a href="/app/auditor/profile_auditor.html" >
+                     <a href="/app/fakultas/profile-fakultas.html" >
                         <span class="nav-icon uil uil-users-alt"></span>
                         <span class="menu-text">Profile</span>
                         <!-- <span class="toggle-icon"></span> -->
@@ -1241,7 +1241,7 @@
                   </li>
 
                   <li class="">
-                     <a href="/app/auditor/change-password-auditor.html">
+                     <a href="/app/fakultas/change-password-fakultas.html">
                         <span class="nav-icon uil uil-sync"></span>
                         <span class="menu-text">Change Password</span>
                      </a>
@@ -1284,6 +1284,14 @@
                      <div class="card-body py-md-30">
                         <div class="horizontal-form">
                            <form action="#">
+                              <div class="form-group row">
+                                 <div class="col-sm-3 d-flex aling-items-center">
+                                    <label for="inputName" class=" col-form-label color-dark fs-14 fw-500 align-center">Nama Fakultas : </label>
+                                 </div>
+                                 <div class="col-sm-9">
+                                    <input type="text" class="form-control ih-medium ip-light radius-xs b-light px-15" id="inputName" placeholder="Sekolah Vokasi">
+                                 </div>
+                              </div>
                               <div class="form-group row">
                                  <div class="col-sm-3 d-flex aling-items-center">
                                     <label for="inputName" class=" col-form-label color-dark fs-14 fw-500 align-center">Nama Anda : </label>
