--- a/app/fakultas/profile-fakultas.html
+++ b/app/fakultas/profile-fakultas.html
@@ -1223,7 +1223,7 @@
                      </ul>
                   </li> -->
                   <li>
-                     <a href="/app/auditor/dashboard-auditor.html" class="active">
+                     <a href="../app/auditor/dashboard-auditor.html" class="active">
                         <span class="nav-icon uil uil-create-dashboard"></span>
                         <span class="menu-text">Dashboard</span>
                      </a>
@@ -1233,7 +1233,7 @@
                   </li>
 
                   <li class="">
-                     <a href="/app/fakultas/profile-fakultas.html" >
+                     <a href="../app/fakultas/profile-fakultas.html" >
                         <span class="nav-icon uil uil-users-alt"></span>
                         <span class="menu-text">Profile</span>
                         <!-- <span class="toggle-icon"></span> -->
@@ -1241,13 +1241,13 @@
                   </li>
 
                   <li class="">
-                     <a href="/app/fakultas/change-password-fakultas.html">
+                     <a href="../app/fakultas/change-password-fakultas.html">
                         <span class="nav-icon uil uil-sync"></span>
                         <span class="menu-text">Change Password</span>
                      </a>
                   </li>
                   <li class="">
-                     <a href="/index.html">
+                     <a href="../index.html">
                         <span class="nav-icon uil uil-sign-out-alt"></span>
                         <span class="menu-text">Log Out</span>
                      </a>
