Modul Simpelbe: Selesai Perbaikan CSS dan Sidebar

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,6 @@
 
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-
 </head>
 
 <body class="layout-light side-menu">
@@ -80,7 +79,7 @@
                <div class="hexadash-top-menu position-relative">
                   <ul class="d-flex align-items-center flex-wrap">
                      <li class="has-subMenu">
-                        <a href="demo2.html" class="active">Dashboard</a>
+                        <a href="dashboard.html" id="link" class="active">Dashboard</a>
                         
                      </li>
                      <li class="has-subMenu">
@@ -607,7 +606,7 @@
                      </ul>
                   </li> -->
                   <li>
-                     <a href="demo2.html" class="active">
+                     <a href="dashboard.html" class="active">
                         <span class="nav-icon uil uil-create-dashboard"></span>
                         <span class="menu-text">Dashboard</span>
                      </a>
@@ -625,10 +624,10 @@
                      <ul>
                        
                         <li class="">
-                           <a href="/pengawasan/proses-ami.html">Proses AMI</a>
+                           <a href="pengawasan/proses-ami.html">Proses AMI</a>
                         </li>
                         <li class="">
-                           <a href="/pengawasan/foto-kegiatan.html">Foto Kegiatan</a>
+                           <a href="pengawasan/foto-kegiatan.html">Foto Kegiatan</a>
                         </li>
                      </ul>
                   </li>
