--- a/laporan/rangking_prodi.html
+++ b/laporan/rangking_prodi.html
@@ -491,10 +491,10 @@
                      <ul>
                        
                         <li class="">
-                           <a href="../pengawasan/proses-ami.html">Proses AMI</a>
+                           <a href="proses-ami.html">Proses AMI</a>
                         </li>
                         <li class="">
-                           <a href="../pengawasan/foto-kegiatan.html">Foto Kegiatan</a>
+                           <a href="foto-kegiatan.html">Foto Kegiatan</a>
                         </li>
                      </ul>
                   </li>
@@ -506,17 +506,17 @@
                      </a>
                      <ul>
                        
-                        <li class="active">
-                           <a href="users-fakultas.html">Fakultas</a>
+                        <li class="">
+                           <a href="../users-fakultas.html">Fakultas</a>
                         </li>
                         <li class="">
-                           <a href="users-prodi.html">Prodi</a>
+                           <a href="../users-prodi.html">Prodi</a>
                         </li>
                         <li class="">
-                           <a href="users-auditor.html">Auditor</a>
+                           <a href="../users-auditor.html">Auditor</a>
                         </li>
                         <li class="">
-                           <a href="users-admin.html">Admin</a>
+                           <a href="../users-admin.html">Admin</a>
                         </li>
 
                      </ul>
@@ -573,7 +573,7 @@
                         <li class="">
                            <a href="../laporan/rekap_temuan.html">Rekap Temuan</a>
                         </li>
-                        <li class="">
+                        <li class="active">
                            <a href="../laporan/rangking_prodi.html">Rangking Prodi</a>
                         </li>
                         <li class="">
