--- a/sign_in/login_auditor.html
+++ b/sign_in/login_auditor.html
@@ -46,13 +46,13 @@
                   </button>
                 </div>
                 <div class="text-center">
-                  <a href="../app/auditor/dashboard-auditor.html" class="mb-4 block w-full py-4 bg-indigo-600 hover:bg-indigo-700 rounded text-sm font-bold text-gray-50">Sign In</a>
+                  <button class="mb-4 w-full py-4 bg-indigo-600 hover:bg-indigo-700 rounded text-sm font-bold text-gray-50">Sign In</button>
                   <a class="text-xs text-green-600 hover:underline" href="#">Forgot password?</a>
                   <a class="p-4 flex justify-center items-center border rounded hover:bg-gray-50" href="#">
-                      <img class="mr-4" src="../atis-assets/social/google-logo.png" alt="">
-                      <span class="text-xs text-gray-500 font-bold">Sign In with Google</span>
+                    <img class="mr-4" src="../atis-assets/social/google-logo.png" alt="">
+                    <span class="text-xs text-gray-500 font-bold">Sign In with Google</span>
                   </a>
-              </div>
+                </div>
               </form>
             </div>
           </div>
