--- a/sign_in/login_lpm.html
+++ b/sign_in/login_lpm.html
@@ -53,6 +53,14 @@
                     <span class="text-xs text-gray-500 font-bold">Sign In with Google</span>
                   </a>
                 </div>
+              <div class="text-center">
+                <a href="../dashboard.html" class="mb-4 block w-full py-4 bg-indigo-600 hover:bg-indigo-700 rounded text-sm font-bold text-gray-50">Sign In</a>
+                <a class="text-xs text-green-600 hover:underline" href="#">Forgot password?</a>
+                <a class="p-4 flex justify-center items-center border rounded hover:bg-gray-50" href="#">
+                    <img class="mr-4" src="../atis-assets/social/google-logo.png" alt="">
+                    <span class="text-xs text-gray-500 font-bold">Sign In with Google</span>
+                </a>
+            </div>
               </form>
             </div>
           </div>
