Perbaikan logo pada dashboard auditor

--- a/app/auditor/dashboard-auditor.html
+++ b/app/auditor/dashboard-auditor.html
@@ -69,8 +69,8 @@
          <div class="navbar-left">
             <div class="logo-area">
                <a class="navbar-brand" href="index.html">
-                  <img class="dark" src="../..img/logo-dark.png" alt="logo">
-                  <img class="light" src="../..img/logo-white.png" alt="logo">
+                  <img class="dark" src="../../img/logo-dark.png" alt="logo">
+                  <img class="light" src="../../img/logo-white.png" alt="logo">
                </a>
                <a href="#" class="sidebar-toggle">
                   <img class="svg" src="../../img/svg/align-center-alt.svg" alt="img"></a>
