--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="rounded-lg bg-gradient-to-br from-indigo-500 to-pink-500 py-6 px-5 text-center flex flex-col justify-between">
         <h4 class="text-xl font-semibold text-white">Auditor</h4>
                 <p class="pt-2 text-white">
-                  Dashboard untuk Auditor melakukan kegiatan auditing khususnya pada laporan-laporan terkait keuangan, dan lainnya /n
+                  Dashboard untuk Auditor melakukan kegiatan auditing khususnya pada laporan-laporan terkait keuangan, dan lainnya
                 </p>
                   <div class="px-5 py-8">
                     <img
@@ -38,7 +38,7 @@
                       src="atis-assets/illustrations/creativedesign-amber.svg"
                       alt="image"/>
                   </div>
-                    <a href="sign_in/login_auditor.html">
+                    <a href="app/auditor/dashboard-auditor.html">
                       <button class="btn w-full border border-white bg-inherit text-white hover:bg-pink-700">
                         Masuk
                       </button>
@@ -57,7 +57,7 @@
                           alt="image"
                         />
                       </div>
-                      <a href="sign_in/login_fakultas.html">
+                      <a href="app/fakultas/dashboard-fakultas.html">
                         <button class="btn w-full border border-white bg-inherit text-white hover:bg-green-600">
                           Masuk
                         </button>
@@ -76,7 +76,7 @@
                         alt="image"
                       />
                     </div>
-                      <a href="sign_in/login_prodi.html">
+                      <a href="app/prodi/dashboard-prodi.html">
                         <button class="btn w-full border border-white bg-inherit text-white hover:bg-blue-600">
                           Masuk
                         </button>
@@ -95,7 +95,7 @@
                             alt="image"
                           />
                         </div>
-                          <a href="sign_in/login_lpm.html">
+                          <a href="dashboard.html">
                             <button class="btn w-full border border-white bg-inherit text-white hover:bg-indigo-600">
                               Masuk
                             </button>
