--- a/app/fakultas/change-password-fakultas.html
+++ b/app/fakultas/change-password-fakultas.html
@@ -49,7 +49,7 @@
 
    <!-- endinject -->
 
-   <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="../../atis-assets/logo/ulbi/logo PP ULBI.png">
 
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -69,8 +69,8 @@
          <div class="navbar-left">
             <div class="logo-area">
                <a class="navbar-brand" href="index.html">
-                  <img class="dark" src="../../img/logo-dark.png" alt="logo">
-                  <img class="light" src="../../img/logo-white.png" alt="logo">
+                  <img class="dark" src="../../atis-assets/logo/ulbi/LOGO ULBI - WIDE DARK (3).png" alt="logo">
+                  <img class="light" src="../../atis-assets/logo/ulbi/LOGO ULBI - WIDE DARK (3).png" alt="logo">
                </a>
                <a href="#" class="sidebar-toggle">
                   <img class="svg" src="../../img/svg/align-center-alt.svg" alt="img"></a>
