tambahan active link pada dashboard

--- a/app/auditor/dashboard-auditor.html
+++ b/app/auditor/dashboard-auditor.html
@@ -1222,8 +1222,8 @@
                         </li>
                      </ul>
                   </li> -->
-                  <li>
-                     <a href="../auditor/dashboard-auditor.html" class="active">
+                  <li class="active">
+                     <a href="../auditor/dashboard-auditor.html" >
                         <span class="nav-icon uil uil-create-dashboard"></span>
                         <span class="menu-text">Dashboard</span>
                      </a>
