--- a/app/auditor/profile-auditor.html
+++ b/app/auditor/profile-auditor.html
@@ -1232,7 +1232,7 @@
                      <span>Applications</span>
                   </li>
 
-                  <li class="">
+                  <li class="active">
                      <a href="../auditor/profile_auditor.html" >
                         <span class="nav-icon uil uil-users-alt"></span>
                         <span class="menu-text">Profile</span>
