--- a/app/fakultas/dashboard-fakultas.html
+++ b/app/fakultas/dashboard-fakultas.html
@@ -1222,8 +1222,8 @@
                         </li>
                      </ul>
                   </li> -->
-                  <li>
-                     <a href="../fakultas/dashboard-fakultas.html" class="active">
+                  <li class="active">
+                     <a href="../fakultas/dashboard-fakultas.html" >
                         <span class="nav-icon uil uil-create-dashboard"></span>
                         <span class="menu-text">Dashboard</span>
                      </a>
