--- a/app/prodi/change-password-prodi.html
+++ b/app/prodi/change-password-prodi.html
@@ -1223,7 +1223,7 @@
                      </ul>
                   </li> -->
                   <li>
-                     <a href="../prodi/dashboard-prodi.html" class="active">
+                     <a href="../prodi/dashboard-prodi.html" >
                         <span class="nav-icon uil uil-create-dashboard"></span>
                         <span class="menu-text">Dashboard</span>
                      </a>
@@ -1240,7 +1240,7 @@
                      </a>
                   </li>
 
-                  <li class="">
+                  <li class="active">
                      <a href="../prodi/change-password-prodi.html">
                         <span class="nav-icon uil uil-sync"></span>
                         <span class="menu-text">Change Password</span>
