--- a/app/prodi/profile-prodi.html
+++ b/app/prodi/profile-prodi.html
@@ -1223,7 +1223,7 @@
                      </ul>
                   </li> -->
                   <li>
-                     <a href="../prodi/dashboard-prodi.html" class="active">
+                     <a href="../prodi/dashboard-prodi.html">
                         <span class="nav-icon uil uil-create-dashboard"></span>
                         <span class="menu-text">Dashboard</span>
                      </a>
@@ -1232,7 +1232,7 @@
                      <span>Applications</span>
                   </li>
 
-                  <li class="">
+                  <li class="active">
                      <a href="../prodi/profile-prodi.html">
                         <span class="nav-icon uil uil-users-alt"></span>
                         <span class="menu-text">Profile</span>
