Simpelbi: Perbaikan Forms penambahan data baru

--- a/users/users-admin.html
+++ b/users/users-admin.html
@@ -626,13 +626,13 @@
                   <div class="breadcrumb-main user-member justify-content-sm-between ">
                      <div class="action-btn">
                         <a href="#" class="btn px-15 btn-primary" data-bs-toggle="modal" data-bs-target="#new-member">
-                           <i class="las la-plus fs-16"></i>users list datatable</a>
+                           <i class="las la-plus fs-16"></i>Tambah Data Baru</a>
                         <!-- Modal -->
                         <div class="modal fade new-member " id="new-member" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Create project</h6>
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah Data Admin</h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
                                     </button>
@@ -641,90 +641,33 @@
                                     <div class="new-member-modal">
                                        <form>
                                           <div class="form-group mb-20">
-                                             <input type="text" class="form-control" placeholder="Duran Clayton">
+                                             <Label>Nama Admin :</Label>
+                                             <input type="text" class="form-control" placeholder="Nama Admin Lengkap Gelar">
                                           </div>
                                           <div class="form-group mb-20">
-                                             <div class="category-member">
-                                                <select class="js-example-basic-single js-states form-control" id="category-member">
-                                                   <option value="JAN">1</option>
-                                                   <option value="FBR">2</option>
-                                                </select>
-                                             </div>
+                                             <Label>Jabatan :</Label>
+                                             <input type="text" class="form-control" placeholder="Jabatan di LPM">
                                           </div>
                                           <div class="form-group mb-20">
-                                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Project description"></textarea>
+                                             <Label>Email :</Label>
+                                             <input type="text" class="form-control" placeholder="Email Aktif">
                                           </div>
-                                          <div class="form-group textarea-group">
-                                             <label class="mb-15">status</label>
-                                             <div class="d-flex">
-                                                <div class="project-task-list__left d-flex align-items-center">
-                                                   <div class="checkbox-group d-flex me-50 pe-10">
-                                                      <div class="checkbox-theme-default custom-checkbox checkbox-group__single d-flex">
-                                                         <input class="checkbox" type="checkbox" id="check-grp-1" checked>
-                                                         <label for="check-grp-1" class="fs-14 color-light strikethrough">
-                                                            status
-                                                         </label>
-                                                      </div>
-                                                   </div>
-                                                   <div class="checkbox-group d-flex me-50 pe-10">
-                                                      <div class="checkbox-theme-default custom-checkbox checkbox-group__single d-flex">
-                                                         <input class="checkbox" type="checkbox" id="check-grp-2">
-                                                         <label for="check-grp-2" class="fs-14 color-light strikethrough">
-                                                            Deactivated
-                                                         </label>
-                                                      </div>
-                                                   </div>
-                                                   <div class="checkbox-group d-flex">
-                                                      <div class="checkbox-theme-default custom-checkbox checkbox-group__single d-flex">
-                                                         <input class="checkbox" type="checkbox" id="check-grp-3">
-                                                         <label for="check-grp-3" class="fs-14 color-light strikethrough">
-                                                            bloked
-                                                         </label>
-                                                      </div>
-                                                   </div>
-                                                </div>
-                                             </div>
+                                          <div class="form-group mb-20">
+                                             <Label>NIDN :</Label>
+                                             <input type="text" class="form-control" placeholder="Nomor Induk Dosen Nasional">
                                           </div>
-                                          <div class="mb-25">
-                                             <div class="form-group mb-10">
-                                                <label for="name47">project member</label>
-                                                <input type="text" class="form-control" id="name47" placeholder="Search members">
-                                             </div>
-                                             <ul class="d-flex flex-wrap mb-20 user-group-people__parent">
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm1.png" alt="author"></a>
-                                                </li>
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm2.png" alt="author"></a>
-                                                </li>
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm3.png" alt="author"></a>
-                                                </li>
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm4.png" alt="author"></a>
-                                                </li>
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm5.png" alt="author"></a>
-                                                </li>
-                                             </ul>
+                                          <div class="form-group mb-20">
+                                             <Label>Telepon :</Label>
+                                             <input type="text" class="form-control" placeholder="Nomor Telpon">
                                           </div>
-                                          <div class="d-flex new-member-calendar">
-                                             <div class="form-group w-100 me-sm-15 form-group-calender">
-                                                <label for="datepicker">start Date</label>
-                                                <div class="position-relative">
-                                                   <input type="text" class="form-control" id="datepicker" placeholder="mm/dd/yyyy">
-                                                   <a href="#">
-                                                      <img class="svg" src="../img/svg/chevron-right.svg" alt="chevron-right.svg"></a>
-                                                </div>
-                                             </div>
-                                             <div class="form-group w-100 form-group-calender">
-                                                <label for="datepicker2">End Date</label>
-                                                <div class="position-relative">
-                                                   <input type="text" class="form-control" id="datepicker2" placeholder="mm/dd/yyyy">
-                                                   <a href="#">
-                                                      <img class="svg" src="../img/svg/chevron-right.svg" alt="chevron-right.svg"></a>
-                                                </div>
-                                             </div>
+                                          
+                                          <div class="form-group mb-20">
+                                             <Label>Password :</Label>
+                                             <input type="text" class="form-control" placeholder="Password">
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <Label>Konfirmasi Password :</Label>
+                                             <input type="text" class="form-control" placeholder="Konfirmasi Password ">
                                           </div>
                                           <div class="button-group d-flex pt-25">
 
@@ -748,7 +691,7 @@
                         <div class="userDatatable adv-table-table global-shadow border-light-0 w-100 adv-table">
                            <div class="table-responsive">
                               <div class="adv-table-table__header">
-                                 <h4>Data Table</h4>
+                                 <h4>Data Admin</h4>
                                  <div class="adv-table-table__button">
                                     <div class="dropdown">
                                        <a class="btn btn-primary dropdown-toggle dm-select" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
