Simpelbi:Perbaikan Sidebar,CSS, Add User,dan logo

--- a/pengawasan/foto-kegiatan.html
+++ b/pengawasan/foto-kegiatan.html
@@ -491,10 +491,10 @@
                      <ul>
                        
                         <li class="">
-                           <a href="proses-ami.html">Proses AMI</a>
+                           <a href="../pengawasan/proses-ami.html">Proses AMI</a>
                         </li>
                         <li class="active">
-                           <a href="foto-kegiatan.html">Foto Kegiatan</a>
+                           <a href="../pengawasan/foto-kegiatan.html">Foto Kegiatan</a>
                         </li>
                      </ul>
                   </li>
