--- a/users/users-auditor.html
+++ b/users/users-auditor.html
@@ -645,7 +645,7 @@
                                                 <Label>Fakultas :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" >
-                                                   <option disabled value="JAN">--Plihi Fakultas--</option>
+                                                   <option disabled value="JAN">--Pilih Fakultas--</option>
                                                 </select>
                                              </div>
                                           </div>
@@ -654,7 +654,7 @@
                                                 <Label>Prodi :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" >
-                                                   <option disabled value="JAN">--Plihi Prodi--</option>
+                                                   <option disabled value="JAN">--Pilih Prodi--</option>
                                                 </select>
                                              </div>
                                           </div>
