--- a/users/users-prodi.html
+++ b/users/users-prodi.html
@@ -645,7 +645,7 @@
                                                 <Label>Fakultas :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" >
-                                                   <option disabled value="JAN">--Plihi Fakultas--</option>
+                                                   <option disabled value="JAN">--Pilih Fakultas--</option>
                                                 </select>
                                              </div>
                                           </div>
@@ -658,7 +658,7 @@
                                                 <Label>Fakultas :</Label>
 
                                                 <select class="js-example-basic-single js-states form-control" >
-                                                   <option disabled value="JAN">--Plih Jenjang--</option>
+                                                   <option disabled value="JAN">--Pilih Jenjang--</option>
                                                    <option  value="Diploma">Diploma</option>
                                                    <option  value="Sarjana">Sarjana</option>
                                                    <option  value="Magister">Magister</option>
