--- a/files/untuk_auditor.html
+++ b/files/untuk_auditor.html
@@ -491,10 +491,10 @@
                      <ul>
                        
                         <li class="">
-                           <a href="proses-ami.html">Proses AMI</a>
+                           <a href="../pengawasan/proses-ami.html">Proses AMI</a>
                         </li>
                         <li class="">
-                           <a href="foto-kegiatan.html">Foto Kegiatan</a>
+                           <a href="../pengawasan/foto-kegiatan.html">Foto Kegiatan</a>
                         </li>
                      </ul>
                   </li>
@@ -507,16 +507,16 @@
                      <ul>
                        
                         <li class="">
-                           <a href="../users-fakultas.html">Fakultas</a>
+                           <a href="../users/users-fakultas.html">Fakultas</a>
                         </li>
                         <li class="">
-                           <a href="../users-prodi.html">Prodi</a>
+                           <a href="../users/users-prodi.html">Prodi</a>
                         </li>
                         <li class="">
-                           <a href="../users-auditor.html">Auditor</a>
+                           <a href="../users/users-auditor.html">Auditor</a>
                         </li>
                         <li class="">
-                           <a href="../users-admin.html">Admin</a>
+                           <a href="../users/users-admin.html">Admin</a>
                         </li>
 
                      </ul>
@@ -626,13 +626,13 @@
                   <div class="breadcrumb-main user-member justify-content-sm-between ">
                      <div class="action-btn">
                         <a href="#" class="btn px-15 btn-primary" data-bs-toggle="modal" data-bs-target="#new-member">
-                           <i class="las la-plus fs-16"></i>users list datatable</a>
+                           <i class="las la-plus fs-16"></i>Tambah Data Baru</a>
                         <!-- Modal -->
                         <div class="modal fade new-member " id="new-member" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
-                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Create project</h6>
+                                    <h6 class="modal-title fw-500" id="staticBackdropLabel">Tambah File Untuk Auditor</h6>
                                     <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                        <img src="../img/svg/x.svg" alt="x" class="svg">
                                     </button>
@@ -641,97 +641,21 @@
                                     <div class="new-member-modal">
                                        <form>
                                           <div class="form-group mb-20">
-                                             <input type="text" class="form-control" placeholder="Duran Clayton">
+                                             <Label>Judul File :</Label>
+                                             <input type="text" class="form-control" placeholder="Judul File">
+
                                           </div>
                                           <div class="form-group mb-20">
-                                             <div class="category-member">
-                                                <select class="js-example-basic-single js-states form-control" id="category-member">
-                                                   <option value="JAN">1</option>
-                                                   <option value="FBR">2</option>
-                                                </select>
-                                             </div>
-                                          </div>
-                                          <div class="form-group mb-20">
-                                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Project description"></textarea>
-                                          </div>
-                                          <div class="form-group textarea-group">
-                                             <label class="mb-15">status</label>
-                                             <div class="d-flex">
-                                                <div class="project-task-list__left d-flex align-items-center">
-                                                   <div class="checkbox-group d-flex me-50 pe-10">
-                                                      <div class="checkbox-theme-default custom-checkbox checkbox-group__single d-flex">
-                                                         <input class="checkbox" type="checkbox" id="check-grp-1" checked>
-                                                         <label for="check-grp-1" class="fs-14 color-light strikethrough">
-                                                            status
-                                                         </label>
-                                                      </div>
-                                                   </div>
-                                                   <div class="checkbox-group d-flex me-50 pe-10">
-                                                      <div class="checkbox-theme-default custom-checkbox checkbox-group__single d-flex">
-                                                         <input class="checkbox" type="checkbox" id="check-grp-2">
-                                                         <label for="check-grp-2" class="fs-14 color-light strikethrough">
-                                                            Deactivated
-                                                         </label>
-                                                      </div>
-                                                   </div>
-                                                   <div class="checkbox-group d-flex">
-                                                      <div class="checkbox-theme-default custom-checkbox checkbox-group__single d-flex">
-                                                         <input class="checkbox" type="checkbox" id="check-grp-3">
-                                                         <label for="check-grp-3" class="fs-14 color-light strikethrough">
-                                                            bloked
-                                                         </label>
-                                                      </div>
-                                                   </div>
-                                                </div>
-                                             </div>
-                                          </div>
-                                          <div class="mb-25">
-                                             <div class="form-group mb-10">
-                                                <label for="name47">project member</label>
-                                                <input type="text" class="form-control" id="name47" placeholder="Search members">
-                                             </div>
-                                             <ul class="d-flex flex-wrap mb-20 user-group-people__parent">
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm1.png" alt="author"></a>
-                                                </li>
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm2.png" alt="author"></a>
-                                                </li>
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm3.png" alt="author"></a>
-                                                </li>
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm4.png" alt="author"></a>
-                                                </li>
-                                                <li>
-                                                   <a href="#"><img class="rounded-circle wh-34" src="../imgtm5.png" alt="author"></a>
-                                                </li>
-                                             </ul>
-                                          </div>
-                                          <div class="d-flex new-member-calendar">
-                                             <div class="form-group w-100 me-sm-15 form-group-calender">
-                                                <label for="datepicker">start Date</label>
-                                                <div class="position-relative">
-                                                   <input type="text" class="form-control" id="datepicker" placeholder="mm/dd/yyyy">
-                                                   <a href="#">
-                                                      <img class="svg" src="../img/svg/chevron-right.svg" alt="chevron-right.svg"></a>
-                                                </div>
-                                             </div>
-                                             <div class="form-group w-100 form-group-calender">
-                                                <label for="datepicker2">End Date</label>
-                                                <div class="position-relative">
-                                                   <input type="text" class="form-control" id="datepicker2" placeholder="mm/dd/yyyy">
-                                                   <a href="#">
-                                                      <img class="svg" src="../img/svg/chevron-right.svg" alt="chevron-right.svg"></a>
-                                                </div>
-                                             </div>
+                                             <Label>Masukkan file  :</Label>
+                                             <input type="file" class="form-control" placeholder="Judul File">
+
                                           </div>
                                           <div class="button-group d-flex pt-25">
 
-                                             <button class="btn btn-primary btn-default btn-squared text-capitalize">add new project
+                                             <button class="btn btn-primary btn-default btn-squared text-capitalize">Simpan
                                              </button>
 
-                                             <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">cancel</button>
+                                             <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
                                           </div>
                                        </form>
                                     </div>
