simpelbi: proses Memperbaiki auth sidebar

--- a/dashboard.html
+++ b/dashboard.html
@@ -750,7 +750,9 @@
                </ul>
             </div>
          </div>
+         
       </div>
+      
 
       <div class="contents">
 
@@ -943,7 +945,7 @@
                <div class="row">
                   <div class="col-md-6">
                      <div class="footer-copyright">
-                        <p><span>© 2023</span><a href="#">Sovware</a>
+                        <p><span>© 2023</span><a href="#"></a>
                         </p>
                      </div>
                   </div>
