--- a/pengawasan/proses-ami.html
+++ b/pengawasan/proses-ami.html
@@ -405,14 +405,7 @@
                                        <i class="uil uil-setting"></i>
                                        Settings</a>
                                  </li>
-                                 <li>
-                                    <a href="">
-                                       <i class="uil uil-key-skeleton"></i> Billing</a>
-                                 </li>
-                                 <li>
-                                    <a href="">
-                                       <i class="uil uil-users-alt"></i> Activity</a>
-                                 </li>
+                                
                                  <li>
                                     <a href="">
                                        <i class="uil uil-bell"></i> Help</a>
@@ -2612,7 +2605,7 @@
                <div class="row">
                   <div class="col-md-6">
                      <div class="footer-copyright">
-                        <p><span>© 2023</span><a href="#">Sovware</a>
+                        <p><span>© 2023</span><a href="#"></a>
                         </p>
                      </div>
                   </div>
