Penambahan Tulisan PSMS pada index

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
       </div>
       <!-- Card 4 -->
       <div class="rounded-lg bg-gradient-to-br from-purple-500 to-indigo-600 py-6 px-5 text-center flex flex-col justify-between">
-        <h4 class="text-xl font-semibold text-white">Lembaga Penjaminan Mutu</h4>
+        <h4 class="text-xl font-semibold text-white">Lembaga Penjaminan Mutu PSMS</h4>
                       <p class="pt-2 text-white">
-                        Dashboard Khusus Lembaga Penjaminan Mutu (Admin)
+                        Dashboard Khusus Lembaga Penjaminan Mutu Direktorat PSMS (Perencanaan Strategis dan Mutu, Sekretariat)
                       </p>
                         <div class="px-5 py-8">
                           <img
