Modul Simpelbi: Mencoba untuk GET Admins

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="atis-assets/logo/ulbi/logo PP ULBI.png">
     <script src="js/main.js"></script>
     <script src="./js/cihuy.js" type="module"></script>
+    <script src="js/admin.js" type="module"></script>
+
 
 </head>
 <body class="antialiased bg-body text-body font-body">
