Modul Simpelbi:   pengecekkan admin

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       alt="image"/>
                   </div>
                     <a href="app/auditor/dashboard-auditor.html">
-                      <button class="btn w-full border border-white bg-inherit text-white hover:bg-pink-700">
+                      <button class="btn w-full border border-white bg-inherit text-white hover:bg-pink-700 masukButton">
                         Masuk
                       </button>
                     </a>
@@ -62,7 +62,7 @@
                         />
                       </div>
                       <a href="app/fakultas/dashboard-fakultas.html">
-                        <button class="btn w-full border border-white bg-inherit text-white hover:bg-green-600">
+                        <button class="btn w-full border border-white bg-inherit text-white hover:bg-green-600 masukButton">
                           Masuk
                         </button>
                       </a>
@@ -81,7 +81,7 @@
                       />
                     </div>
                       <a href="app/prodi/dashboard-prodi.html">
-                        <button class="btn w-full border border-white bg-inherit text-white hover:bg-blue-600">
+                        <button class="btn w-full border border-white bg-inherit text-white hover:bg-blue-600 masukButton">
                           Masuk
                         </button>
                       </a>
@@ -100,7 +100,7 @@
                           />
                         </div>
                           <a href="dashboard.html">
-                            <button class="btn w-full border border-white bg-inherit text-white hover:bg-indigo-600">
+                            <button class="btn w-full border border-white bg-inherit text-white hover:bg-indigo-600 masukButton">
                               Masuk
                             </button>
                           </a>
