Modul Simpelbi: Penyesuaian role saat login

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                       alt="image"/>
                   </div>
                     <a href="app/auditor/dashboard-auditor.html">
-                      <button class="btn w-full border border-white bg-inherit text-white hover:bg-pink-700 masukButton">
+                      <button class="btn w-full border border-white bg-inherit text-white hover:bg-pink-700 masukButton"data-role="auditor">
                         Masuk
                       </button>
                     </a>
       </div>
       <!-- Card 2 -->
-      <div class="rounded-lg bg-gradient-to-br from-green-500 to-yellow-600 py-6 px-5 text-center flex flex-col justify-between">
+      <div class="rounded-lg bg-gradient-to-br from-green-500 to-yellow-600 py-6 px-5 text-center flex flex-col justify-between"data-role="fakultas">
         <h4 class="text-xl font-semibold text-white">Fakultas/Sekolah Vokasi</h4>
                     <p class="pt-2 text-white">
                       Dashboard Penjaminan Mutu khusus untuk Fakultas Teknologi dan Bisnis & Sekolah Vokasi ULBI
@@ -81,7 +81,7 @@
                       />
                     </div>
                       <a href="app/prodi/dashboard-prodi.html">
-                        <button class="btn w-full border border-white bg-inherit text-white hover:bg-blue-600 masukButton">
+                        <button class="btn w-full border border-white bg-inherit text-white hover:bg-blue-600 masukButton"data-role="prodi">
                           Masuk
                         </button>
                       </a>
@@ -100,11 +100,11 @@
                           />
                         </div>
                           <a href="dashboard.html">
-                            <button class="btn w-full border border-white bg-inherit text-white hover:bg-indigo-600 masukButton">
+                            <button class="btn w-full border border-white bg-inherit text-white hover:bg-indigo-600 masukButton"data-role="admin">
                               Masuk
                             </button>
                           </a>
-      </div>
+                      </div>
     </div>
     <!-- </div> -->
   </div>
