Modul Simpelbi: Memperbaiki Tag data-role di index

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </a>
       </div>
       <!-- Card 2 -->
-      <div class="rounded-lg bg-gradient-to-br from-green-500 to-yellow-600 py-6 px-5 text-center flex flex-col justify-between"data-role="fakultas">
+      <div class="rounded-lg bg-gradient-to-br from-green-500 to-yellow-600 py-6 px-5 text-center flex flex-col justify-between">
         <h4 class="text-xl font-semibold text-white">Fakultas/Sekolah Vokasi</h4>
                     <p class="pt-2 text-white">
                       Dashboard Penjaminan Mutu khusus untuk Fakultas Teknologi dan Bisnis & Sekolah Vokasi ULBI
@@ -62,7 +62,7 @@
                         />
                       </div>
                       <a href="app/fakultas/dashboard-fakultas.html">
-                        <button class="btn w-full border border-white bg-inherit text-white hover:bg-green-600 masukButton">
+                        <button class="btn w-full border border-white bg-inherit text-white hover:bg-green-600 masukButton" data-role="fakultas">
                           Masuk
                         </button>
                       </a>
