Modul Simpelbi: Pembuatan Sidebar sesuai role

--- a/app/admins/dashboard.html
+++ b/app/admins/dashboard.html
@@ -46,6 +46,8 @@
    <link rel="stylesheet" href="../../assets/vendor_assets/css/wickedpicker.min.css">
 
    <link rel="stylesheet" href="../../style.css">
+   <link rel="stylesheet" href="../../js/cihuy.js" type="module">
+
 
    <!-- endinject -->
 
