Modul simpelbi: Mengganti isi js

--- a/admins/dashboard.html
+++ b/admins/dashboard.html
@@ -46,7 +46,7 @@
    <link rel="stylesheet" href="../assets/vendor_assets/css/wickedpicker.min.css">
 
    <link rel="stylesheet" href="../style.css">
-   <!-- <script src="../js/cihuy.js" type="module"></script>    -->
+   <script src="../js/cihuy.js" type="module"></script>   
 
 
    <!-- endinject -->
