Modul Simpelbi: Memperbaiki endpoint menu/file

--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -49,6 +49,7 @@
    <script src="../js/cihuy.js" type="module"></script>   
 
    <!-- endinject -->
+   <!-- endinject -->
 
    <link rel="icon" type="image/png" sizes="16x16" href="../atis-assets/logo/ulbi/logo PP ULBI.png">
 
