Modul Presensi : Direct file cihuy js utk sidebar

--- a/admins/dashboard.html
+++ b/admins/dashboard.html
@@ -46,8 +46,9 @@
    <link rel="stylesheet" href="../assets/vendor_assets/css/wickedpicker.min.css">
 
    <link rel="stylesheet" href="../style.css">
-   <script src="../js/cihuy.js" type="module"></script>   
 
+   <!-- Library GET Sidebar -->
+   <script src="../js/cihuy.js" type="module"></script>   
 
    <!-- endinject -->
 
