--- a/ami/kts.html
+++ b/ami/kts.html
@@ -51,6 +51,9 @@
 
    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
 
+   <!-- Library GET Sidebar -->
+   <script src="../js/cihuy.js" type="module"></script>   
+
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
