--- a/ami/ami.html
+++ b/ami/ami.html
@@ -48,8 +48,10 @@
    <link rel="stylesheet" href="../style.css">
 
    <!-- endinject -->
-
    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
+
+   <!-- Library GET Sidebar -->
+   <script src="../js/cihuy.js" type="module"></script>   
 
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
